--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -45,6 +45,7 @@
 			<url-pattern>/static/*</url-pattern>
 			<url-pattern>/editor/*</url-pattern>
 			<url-pattern>/taxonomy-editor/*</url-pattern>
+			<url-pattern>/it/*</url-pattern>
 			<url-pattern>/greet/*</url-pattern>
 			<url-pattern>/login/*</url-pattern>
 			<url-pattern>/logout/*</url-pattern>
