--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="WEB-INF/src/taxonomy/main"/>
 	<classpathentry kind="src" path="WEB-INF/src/test"/>
 	<classpathentry kind="src" path="src/runnables"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/commons-codec-1.6.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/commons-io-2.3.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/commons-logging-1.1.3.jar"/>
