--- a/.classpath
+++ b/.classpath
@@ -32,5 +32,6 @@
 	<classpathentry kind="lib" path="WEB-INF/lib/jsoup-1.10.2.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/laji-auth-client-1.2.0-jar-with-dependencies.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/caffeine-2.8.0.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
