--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -47,6 +47,7 @@
 			<url-pattern>/taxonomy-editor/*</url-pattern>
 			<url-pattern>/it/*</url-pattern>
 			<url-pattern>/namespaces/*</url-pattern>
+			<url-pattern>/namespaces-edit/*</url-pattern>
 			<url-pattern>/api/namespaces/*</url-pattern>
 			<url-pattern>/greet/*</url-pattern>
 			<url-pattern>/login/*</url-pattern>
