--- a/.classpath
+++ b/.classpath
@@ -16,10 +16,8 @@
 	<classpathentry kind="lib" path="WEB-INF/lib/httpmime-4.3.5.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/luomus-commons.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/mail.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat/bin/tomcat-juli.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat/lib/tomcat-jdbc.jar"/>
 	<classpathentry kind="lib" path="C:/apache-tomcat/lib/tomcat-util.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/jsoup-1.10.2.jar"/>
@@ -29,5 +27,7 @@
 	<classpathentry kind="lib" path="WEB-INF/lib/commons-csv-1.6.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/jena-3.13.1.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/mysql-connector-java-5.1.35-bin.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/HikariCP-4.0.3.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/ojdbc8.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
