--- a/.classpath
+++ b/.classpath
@@ -16,9 +16,6 @@
 	<classpathentry kind="lib" path="WEB-INF/lib/httpmime-4.3.5.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/luomus-commons.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/mail.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat/bin/tomcat-juli.jar"/>
-	<classpathentry kind="lib" path="C:/apache-tomcat/lib/tomcat-util.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/jsoup-1.10.2.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/laji-auth-client-1.2.0-jar-with-dependencies.jar"/>
@@ -28,6 +25,7 @@
 	<classpathentry kind="lib" path="WEB-INF/lib/jena-3.13.1.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/mysql-connector-java-5.1.35-bin.jar"/>
 	<classpathentry kind="lib" path="WEB-INF/lib/HikariCP-4.0.3.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="WEB-INF/lib/oracle-19c-ojdbc8.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ServletAPI"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
